fixed issue #11963 #11964 #11974 #11985, and upgrade the SQLite provider as the version 1.0.44.0 in unit test project.
git-svn-id: https://dbentry.svn.codeplex.com/svn@25249 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -332,6 +332,7 @@ copy *.dll ..\..\..\..\bin\
   </ItemGroup>
   <ItemGroup>
     <None Include="DbEntry.snk" />
+    <EmbeddedResource Include="dynamic.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
