Complated work items #12066, #12065, #12067, #12064
git-svn-id: https://dbentry.svn.codeplex.com/svn@25342 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\AutoCreateTableTest.cs" />
+    <Compile Include="Data\BulkCopyTest.cs" />
     <Compile Include="Data\CommonUsageTest.cs" />
     <Compile Include="Data\ComplexDynamicObjectTest.cs" />
     <Compile Include="Data\CreateTable\SQLiteTest.cs" />
