Complated work item #12030, #12074, some progressing of others.
git-svn-id: https://dbentry.svn.codeplex.com/svn@25361 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -90,6 +90,7 @@
     <Compile Include="util\SystemHelperTest.cs" />
     <Compile Include="util\TestEnum.cs" />
     <Compile Include="util\ThreadingQueueTest.cs" />
+    <Compile Include="util\UrlBuilderTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UnitTest.config.xml" />
