Compleated work item #11967, #11968
git-svn-id: https://dbentry.svn.codeplex.com/svn@25408 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -108,6 +108,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Builder\CreateTableStatementBuilder.cs" />
     <Compile Include="Builder\DbIndex.cs" />
     <Compile Include="Definition\IRenew.cs" />
+    <Compile Include="Definition\ISavedNewRelations.cs" />
     <Compile Include="Definition\LazyLoadListBase.cs" />
     <Compile Include="Definition\OrderByAttribute.cs" />
     <Compile Include="Driver\DbFactory.cs" />
