Complated work item #12046
git-svn-id: https://dbentry.svn.codeplex.com/svn@25444 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -85,6 +85,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\DynamicObjectReference.cs" />
     <Compile Include="Common\GroupByObject.cs" />
     <Compile Include="Common\IDbObjectHandler.cs" />
+    <Compile Include="Common\IExcuteableDataSource.cs" />
     <Compile Include="Common\MemberAdapater.cs" />
     <Compile Include="Common\MemoryAssembly.cs" />
     <Compile Include="Common\MemoryTypeBuilder.cs" />
