--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ActsAsTreeTest.cs" />
     <Compile Include="Data\AutoCreateTableTest.cs" />
     <Compile Include="Data\BulkCopyTest.cs" />
     <Compile Include="Data\CommonUsageTest.cs" />
