Complated work item #12301
git-svn-id: https://dbentry.svn.codeplex.com/svn@25801 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -94,7 +94,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\VBHelper.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="DbEntryDataSource.cs" />
-    <Compile Include="Definition\ActsAsTree.cs" />
+    <Compile Include="Definition\DbObjectModelAsTree.cs" />
     <Compile Include="Definition\BelongsToAttribute.cs" />
     <Compile Include="Definition\DbObjectBase.cs" />
     <Compile Include="Definition\DbObjectModel.cs" />
