Complated work item #12324
git-svn-id: https://dbentry.svn.codeplex.com/svn@25837 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Data\SmartUpdateTest.cs" />
     <Compile Include="Data\ValidateHandlerTest.cs" />
     <Compile Include="Data\VBHelperTest.cs" />
+    <Compile Include="DotNetFramework\TextTest.cs" />
     <Compile Include="InitHelper.cs" />
     <Compile Include="Data\Inner\DataTester.cs" />
     <Compile Include="Data\Inner\DateParamterTest.cs" />
