Complated work items #11965 #12340 #12070 #12071 #12394 #12395 #12399 #12409 #12416 #12437
git-svn-id: https://dbentry.svn.codeplex.com/svn@26114 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -6,7 +6,7 @@
 
   <org.hanzify.llf.Settings>
     <add key="AutoCreateTable" value="true" />
-    <add key="DefaultContext" value="Access" />
+    <add key="DefaultContext" value="SQLite" />
 
     <add key="Access.DataBase" value="@Access : @~test.mdb" />
 
@@ -21,6 +21,6 @@
     <add key="MySql2.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.1.2.2, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
 
     <add key="SQLite.DataBase" value="@SQLite : @~Test.db" />
-    <add key="SQLite.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.36.1, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
+    <add key="SQLite.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.44.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
   </org.hanzify.llf.Settings>
 </configuration>
