--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -17,9 +17,7 @@
   <appSettings/>
 	<connectionStrings/>
 	<system.web>
-		<compilation debug="true">
-			<assemblies>
-				<add assembly="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies></compilation>
+		<compilation debug="true" />
 		<authentication mode="Windows"/>
 	</system.web>
 </configuration>
