--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -81,8 +81,10 @@ copy *.dll ..\..\..\..\bin\
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builder\Clause\ConstCondition.cs" />
+    <Compile Include="Builder\ISqlKeys.cs" />
     <Compile Include="Common\DbStructInterface.cs" />
     <Compile Include="Common\DynamicObjectReference.cs" />
+    <Compile Include="Common\EmitObjectHandlerBase.cs" />
     <Compile Include="Common\GroupByObject.cs" />
     <Compile Include="Common\IDbObjectHandler.cs" />
     <Compile Include="Common\IExcuteableDataSource.cs" />
@@ -111,7 +113,10 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Builder\DbIndex.cs" />
     <Compile Include="Definition\IRenew.cs" />
     <Compile Include="Definition\ISavedNewRelations.cs" />
+    <Compile Include="Definition\LazyLoadAttribute.cs" />
+    <Compile Include="Definition\LazyLoadField.cs" />
     <Compile Include="Definition\LazyLoadListBase.cs" />
+    <Compile Include="Definition\LazyLoadOneBase.cs" />
     <Compile Include="Definition\OrderByAttribute.cs" />
     <Compile Include="Driver\DbFactory.cs" />
     <Compile Include="Driver\SmartDbFactory.cs" />
