--- a/src/org.hanzify.llf.util/org.hanzify.llf.util.csproj
+++ b/src/org.hanzify.llf.util/org.hanzify.llf.util.csproj
@@ -67,9 +67,6 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
-    <Reference Include="System.Runtime.Remoting">
-      <Name>System.Runtime.Remoting</Name>
-    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
@@ -77,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonHelper.cs" />
+    <Compile Include="Logging\ConsoleMessageRecorder.cs" />
     <Compile Include="Logging\DebugLogRecorder.cs" />
     <Compile Include="Logging\ILogDirect.cs" />
     <Compile Include="Logging\LogType.cs" />
@@ -136,9 +134,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Rand.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="RemotingHelper.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ResourceHelper.cs">
