--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -96,7 +96,7 @@
     <Compile Include="util\SystemHelperTest.cs" />
     <Compile Include="util\TestEnum.cs" />
     <Compile Include="util\ThreadingQueueTest.cs" />
-    <Compile Include="util\UrlBuilderTest.cs" />
+    <Compile Include="Web\UrlBuilderTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UnitTest.config.xml" />
@@ -113,6 +113,10 @@
     <ProjectReference Include="..\org.hanzify.llf.util\org.hanzify.llf.util.csproj">
       <Project>{F53E89FC-F364-4C7D-A20A-CACFBF11C196}</Project>
       <Name>org.hanzify.llf.util</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\org.hanzify.llf.Web\org.hanzify.llf.Web.csproj">
+      <Project>{A73147C3-73C4-4590-9EC4-250AC83F4EF5}</Project>
+      <Name>org.hanzify.llf.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
