--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Data\ActsAsTreeTest.cs" />
     <Compile Include="Data\AutoCreateTableTest.cs" />
+    <Compile Include="Data\BelongsMoreTest.cs" />
     <Compile Include="Data\BulkCopyTest.cs" />
     <Compile Include="Data\CommonUsageTest.cs" />
     <Compile Include="Data\ComplexDynamicObjectTest.cs" />
