--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Data\PropertyClassTest.cs" />
     <Compile Include="Data\SerializationTest.cs" />
     <Compile Include="Data\SmartUpdateTest.cs" />
+    <Compile Include="Data\SoftDeleteTest.cs" />
     <Compile Include="Data\ValidateHandlerTest.cs" />
     <Compile Include="Data\VBHelperTest.cs" />
     <Compile Include="DotNetFramework\NullabelTest.cs" />
