Complated work item #12506
git-svn-id: https://dbentry.svn.codeplex.com/svn@26463 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Data\SerializationTest.cs" />
     <Compile Include="Data\SmartUpdateTest.cs" />
     <Compile Include="Data\SoftDeleteTest.cs" />
+    <Compile Include="Data\TableSchemaTest.cs" />
     <Compile Include="Data\ValidateHandlerTest.cs" />
     <Compile Include="Data\VBHelperTest.cs" />
     <Compile Include="DotNetFramework\NullabelTest.cs" />
