--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -132,6 +132,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\HasMany.cs" />
     <Compile Include="SqlEntry\CommonBulkCopy.cs" />
     <Compile Include="SqlEntry\ConnectionContext.cs" />
+    <Compile Include="SqlEntry\DbColumnInfo.cs" />
     <Compile Include="SqlEntry\IDbBulkCopy.cs" />
     <Compile Include="SqlEntry\IHasConnection.cs" />
     <Compile Include="Common\LimitedListInserter.cs" />
