Complated work items #12570 #12569
git-svn-id: https://dbentry.svn.codeplex.com/svn@26494 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
+++ b/src/org.hanzify.llf.Data/org.hanzify.llf.Data.csproj
@@ -118,6 +118,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\LazyLoadOneBase.cs" />
     <Compile Include="Definition\OrderByAttribute.cs" />
     <Compile Include="Definition\SoftDeleteAttribute.cs" />
+    <Compile Include="Dialect\SequencedDialect.cs" />
     <Compile Include="Driver\DbFactory.cs" />
     <Compile Include="Driver\SmartDbFactory.cs" />
     <Compile Include="DynamicObject.cs" />
