--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,22 +5,7 @@
   </configSections>
 
   <org.hanzify.llf.Settings>
-    <add key="AutoCreateTable" value="true" />
-    <add key="DefaultContext" value="SQLite" />
-
-    <add key="Access.DataBase" value="@Access : @~test.mdb" />
-
-    <add key="Excel.DataBase" value="@Excel : @~test.xls" />
-
-    <add key="SqlServer.DataBase" value="@SqlServer2005 : data source=LLF\SQLEXPRESS;initial catalog=llf_sql_test;user id=sa;password=123" />
-
-    <add key="MySql.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false" />
-    <add key="MySql.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.0.1.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-
-    <add key="MySql2.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false" />
-    <add key="MySql2.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.1.2.2, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-
-    <add key="SQLite.DataBase" value="@SQLite : @~Test.db" />
-    <add key="SQLite.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.44.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
+    <add key="DataBase" value="@Firebird : User=SYSDBA;Password=masterkey;Database=c:\mytest.fdb;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=true;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0" />
+    <add key="DbProviderFactory" value="@SmartDbFactory : FirebirdSql.Data.FirebirdClient, Version=2.0.1.0, Culture=neutral, PublicKeyToken=3750abcc3150b00c" />
   </org.hanzify.llf.Settings>
 </configuration>
