--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,6 +5,8 @@
   </configSections>
 
   <org.hanzify.llf.Settings>
+    <add key="AutoCreateTable" value="true" />
+
     <add key="DataBase" value="@Firebird : User=SYSDBA;Password=masterkey;Database=c:\mytest.fdb;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=true;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0" />
     <add key="DbProviderFactory" value="@SmartDbFactory : FirebirdSql.Data.FirebirdClient, Version=2.0.1.0, Culture=neutral, PublicKeyToken=3750abcc3150b00c" />
   </org.hanzify.llf.Settings>
