--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,9 +5,8 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="AutoCreateTable" value="true" />
-
-    <add key="DataBase" value="@Firebird : User=SYSDBA;Password=masterkey;Database=c:\mytest.fdb;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=true;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0" />
-    <add key="DbProviderFactory" value="@SmartDbFactory : FirebirdSql.Data.FirebirdClient, Version=2.0.1.0, Culture=neutral, PublicKeyToken=3750abcc3150b00c" />
+    <add key="ObjectHandlerType" value="Reflection" />
+    <add key="DataBase" value="@Oracle : Data Source=localhost; User Id=llf; Password=123" />
+    <add key="DbProviderFactory" value="@SmartDbFactory : System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </Lephone.Settings>
 </configuration>
