--- a/src/org.hanzify.llf.Data/Lephone.Data.csproj
+++ b/src/org.hanzify.llf.Data/Lephone.Data.csproj
@@ -120,6 +120,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\OrderByAttribute.cs" />
     <Compile Include="Definition\SoftDeleteAttribute.cs" />
     <Compile Include="Dialect\Firebird.cs" />
+    <Compile Include="Dialect\Oracle.cs" />
     <Compile Include="Dialect\SequencedDialect.cs" />
     <Compile Include="Driver\DbFactory.cs" />
     <Compile Include="Driver\SmartDbFactory.cs" />
