--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,7 +5,9 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="ObjectHandlerType" value="Reflection" />
+    <add key="ObjectHandlerType" value="Emit" />
+    <add key="AutoCreateTable" value="true" />
+    
     <add key="DataBase" value="@Oracle : Data Source=localhost; User Id=llf; Password=123" />
     <add key="DbProviderFactory" value="@SmartDbFactory : System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </Lephone.Settings>
