--- a/src/org.hanzify.llf.Data/Lephone.Data.csproj
+++ b/src/org.hanzify.llf.Data/Lephone.Data.csproj
@@ -93,6 +93,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\ReflectionDbObjectHandler.cs" />
     <Compile Include="Common\SoftDeleteQueryComposer.cs" />
     <Compile Include="Common\StaticPagedSelector.cs" />
+    <Compile Include="Common\StupidDataReader.cs" />
     <Compile Include="Common\VBHelper.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Definition\DbObjectModelAsTree.cs" />
