--- a/src/WebDebugLib/DebugLib.csproj
+++ b/src/WebDebugLib/DebugLib.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BookController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserDataSource.cs" />
