--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -5,6 +5,7 @@
   </configSections>
 
   <Lephone.Settings>
+    <add key="SqlLogRecorder" value="Lephone.Util.Logging.DebugLogRecorder, Lephone.Util" />
     <add key="AutoCreateTable" value="true" />
     <add key="DefaultContext" value="Development" />
     
@@ -17,7 +18,21 @@
   <appSettings/>
 	<connectionStrings/>
 	<system.web>
-		<compilation debug="true" />
+    <httpHandlers>
+      <add path="*.jpg" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.gif" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.png" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.css" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.js" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.7z" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.zip" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.rar" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.htm" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
+      <add path="*" verb="*" type="Lephone.Web.HttpDispatcher, Lephone.Web" validate="true" />
+    </httpHandlers>
+
+    <compilation debug="true" />
 		<authentication mode="Windows"/>
 	</system.web>
 </configuration>
