--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Data\SmartUpdateTest.cs" />
     <Compile Include="Data\SoftDeleteTest.cs" />
     <Compile Include="Data\TableSchemaTest.cs" />
+    <Compile Include="Data\UnsignedNumberTest.cs" />
     <Compile Include="Data\ValidateHandlerTest.cs" />
     <Compile Include="Data\VBHelperTest.cs" />
     <Compile Include="DotNetFramework\NullabelTest.cs" />
