--- a/src/org.hanzify.llf.Data/Lephone.Data.csproj
+++ b/src/org.hanzify.llf.Data/Lephone.Data.csproj
@@ -82,6 +82,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Builder\Clause\ConstCondition.cs" />
     <Compile Include="Builder\ISqlKeys.cs" />
     <Compile Include="Common\DbStructInterface.cs" />
+    <Compile Include="Common\DeleteToQueryComposer.cs" />
     <Compile Include="Common\DynamicObjectReference.cs" />
     <Compile Include="Common\EmitObjectHandlerBase.cs" />
     <Compile Include="Common\GroupByObject.cs" />
@@ -102,6 +103,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\DbObjectModel.cs" />
     <Compile Include="Definition\DbObjectModelBase.cs" />
     <Compile Include="Definition\DbObjectSmartUpdate.cs" />
+    <Compile Include="Definition\DeleteToAttribute.cs" />
     <Compile Include="Definition\HasAndBelongsToMany.cs" />
     <Compile Include="Definition\HasAndBelongsToManyAttribute.cs" />
     <Compile Include="Definition\HasManyAttribute.cs" />
