--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -29,7 +29,7 @@
       <add path="*.rar" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
       <add path="*.htm" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
       <add path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*" verb="*" type="Lephone.Web.HttpDispatcher, Lephone.Web" validate="true" />
+      <add path="*" verb="*" type="Lephone.Web.RailsDispatcher, Lephone.Web" validate="true" />
     </httpHandlers>
 
     <compilation debug="true" />
