--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -32,6 +32,8 @@
       <add path="*" verb="*" type="Lephone.Web.RailsDispatcher, Lephone.Web" validate="true" />
     </httpHandlers>
 
+    <pages pageBaseType="Lephone.Web.Rails.PageBase, Lephone.Web" />
+
     <compilation debug="true" />
 		<authentication mode="Windows" />
 	</system.web>
