--- a/src/org.hanzify.llf.Web/Lephone.Web.csproj
+++ b/src/org.hanzify.llf.Web/Lephone.Web.csproj
@@ -43,8 +43,7 @@
   <ItemGroup>
     <Compile Include="Common\ButtonIDConverter.cs" />
     <Compile Include="Common\LabelIDConverter.cs" />
-    <Compile Include="DbEntryDataBinder.cs" />
-    <Compile Include="Common\ExcuteableDataSourceIDCoverter.cs" />
+    <Compile Include="DbEntryDataSource_Binder.cs" />
     <Compile Include="Common\PageHelper.cs" />
     <Compile Include="HtmlBuilder.cs" />
     <Compile Include="Rails\FlashBox.cs" />
