--- a/src/org.hanzify.llf.Web/Lephone.Web.csproj
+++ b/src/org.hanzify.llf.Web/Lephone.Web.csproj
@@ -64,6 +64,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UrlRewriter.cs" />
+    <Compile Include="XmlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.snk" />
