--- a/src/org.hanzify.llf.Data/Lephone.Data.csproj
+++ b/src/org.hanzify.llf.Data/Lephone.Data.csproj
@@ -89,6 +89,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\GroupByObject.cs" />
     <Compile Include="Common\IDbObjectHandler.cs" />
     <Compile Include="Common\ManyToManyMediTable.cs" />
+    <Compile Include="Common\OptimisticLockingQueryComposer.cs" />
     <Compile Include="Common\QueryComposer.cs" />
     <Compile Include="Common\MemberAdapater.cs" />
     <Compile Include="Common\MemoryAssembly.cs" />
